services added to homepage

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <a href="greenleaf.html"><i></i> <span><img src="assets/img/products/greenleaflogo.png"></span></a>
                     </div>
                     <div class="item">
-                        <a href="greenleaf.html"><i></i> <span><img src="assets/img/products/crystal-holdings.jpg"></span></a>
+                        <a href="greenleaf.html"><i></i> <span><img src="assets/img/products/crystal-holdings.png"></span></a>
                     </div>
                 </div>
                 <script>
@@ -233,165 +233,58 @@
             <div class="row" data-scrollreveal="enter bottom over 1s">
                 <div class="col-md-4 services-col">
                     <div class="text-center">
-                        <i class="fa fa-4x fa-mobile text-primary"></i>
-                        <h3>Web and Mobile<br>
-                            Applications</h3>
+                        <img class="services-img" src="assets/img/icons/mobile_application_icon.png">
+                        <h3>Mobile Application Development</h3>
                         <div class="text-justify">
                             <p>We design and implement Web and Mobile application to suit your requirements.We primarily use a solid javascript framework known as meteor for the web applications.And the applications build like this are super fast and responsive, it brings a whole new user experience, which users love.</p>
-                            <p>We are creating iOS and Android based mobile apps. And they are beautiful, minimaly designed and pleasing to use.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 services-col">
-                    <div class="text-center">
-                        <i class="fa fa-4x fa-bars text-primary"></i>
-                        <h3>SaaS Platform<br>
-                            Development</h3>
-                        <div class="text-justify">
-                            <p>We envision and develop our own products. Having a creative and a passionate team helps a lot in bring ideas in to life.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 services-col">
-                    <div class="text-center">
-                        <i class="fa fa-4x fa-gears text-primary"></i>
-                        <h3>Business Process Optimization</h3>
-                        <div class="text-justify">
-                            <p>We will examine your existing business process and will provide advices and technological implementations to improve the system and operational efficiency.Our methods are derived from the concept known as Lean manufacturing. It could be simple changes in your process, that is needed to increase productivity in multiple times.Every second in a business process counts.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <aside class="bg-parallax-dark nopadding" data-stellar-background-ratio="0.5" style="background-image: url(assets/img/demo-bgs/faces-demo.jpg);">
-        <div class="aside-overlay">
-            <div class="container">
-                <div class="row text-center">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <h2>Quality and Creativity</h2>
-                        <hr class="light">
-                        <p>Two things we never compromise. And agile practises help us to deliver faster.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </aside><!--<section id="portfolio" class="portfolio-1">-->
-    <!--<div class="container">-->
-    <!--<div class="row">-->
-    <!--<div class="col-lg-12 text-center" data-scrollreveal="move 0 over 1s">-->
-    <!--<h2>Our Products</h2>-->
-    <!--<hr class="primary">-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<div class="row" data-scrollreveal="enter bottom over 1s">-->
-    <!--<div class="isotope">-->
-    <!--<div class="col-sm-4 portfolio-item graphic">-->
-    <!--<a href="#portfolio-modal-2" class="portfolio-link" data-toggle="modal">-->
-    <!--<div class="caption">-->
-    <!--<div class="caption-content">-->
-    <!--<h3><i class="fa fa-search fa-2x"></i> greenleaf-->
-    <!--</h3>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<img src="assets/img/demo-portfolio/greenleaflogo.png" class="img-centered" alt="">-->
-    <!--</a>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</section>-->
 
-    <section class="portfolio-2 bg-lighter text-center" id="partner">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2>We are looking for partners</h2>
-                    <hr class="primary">
-                </div>
-                <div class="col-lg-12">
-                    <div id="portfolio-2-carousel">
-                        <div class="item">
-                            <div class="row">
-                                <div class="col-xs-8 col-xs-offset-2">
-                                    <h3>Software Resellers</h3>
-                                    <p>We love to help people all around the world with our products. We are looking for software resellers in different countries. Currently we are promoting a mobile and web based product in the education sector.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="row">
-                                <div class="col-xs-8 col-xs-offset-2">
-                                    <h3>Healthcare</h3>
-                                    <p>The team Incy is working on a patient centric service portal. If you are a providing healthcare services, we would love to hear from you and explore possibilities of working together.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="row">
-                                <div class="col-xs-8 col-xs-offset-2">
-                                    <h3>Education Sector</h3>
-                                    <p>We are in search of early adaptors for our school management application suite.Application suite is a web and mobile solution with total management control of organisational information flow. Accompanying mobile applications provide useful features for students,lecturers and parents.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="row">
-                                <div class="col-xs-8 col-xs-offset-2">
-                                    <h3>Hospitality Sector</h3>
-                                    <p>We collaborate with hospitality organizations, companies and professionals who share the vision of innovative use of internet technologies to provide services for travelers.</p>
-                                </div>
-                            </div>
                         </div>
                     </div>
-                    <div class="clearfix"></div>
                 </div>
-            </div>
-        </div>
-    </section><!-- About Option 1 -->
-    <section class="contact-1" id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6" data-scrollreveal="enter left over 1s">
-                    <h2>Say Hello!</h2><br>
-                    <p>We are exited to hear from you.</p><br>
-                    <p>Let us know whats in your mind, If it's help that you need with your business and technology, we are here exactly for that.</p><br>
-                    <p>Interested in partnering as a consultant, reseller or a service provider? Let the conversation begin.</p><br>
-                    <p>Or, drop us a message to get a quotation, free of charge.</p>
+                <div class="col-md-4 services-col">
+                    <div class="text-center">
+                        <img class="services-img" src="assets/img/icons/website-design-icon.png">
+                        <h3>Web Design & <br>Development</h3>
+                        <div class="text-justify">
+                            <p>We design and implement Web and Mobile application to suit your requirements.We primarily use a solid javascript framework known as meteor for the web applications.And the applications build like this are super fast and responsive, it brings a whole new user experience, which users love.</p>
+
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-5 col-lg-offset-1" data-scrollreveal="enter right over 1s">
-                    <br>
-                    <form id="contactForm" name="sentMessage" novalidate="">
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Name</label> <input class="form-control" data-validation-required-message="Please enter your name." id="name" placeholder="Name" required="" type="text">
-                                <p class="help-block text-danger"></p>
-                            </div>
+                <div class="col-md-4 services-col">
+                    <div class="text-center">
+                        <img class="services-img" src="assets/img/icons/outsourcing_icon.png">
+                        <h3>Outsourced Product Development</h3>
+                        <div class="text-justify">
+                            <p>We design and implement Web and Mobile application to suit your requirements.We primarily use a solid javascript framework known as meteor for the web applications.And the applications build like this are super fast and responsive, it brings a whole new user experience, which users love.</p>
+
                         </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Email Address</label> <input class="form-control" data-validation-required-message="Please enter your email address." id="email" placeholder="Email Address" required="" type="email">
-                                <p class="help-block text-danger"></p>
-                            </div>
+                    </div>
+                </div>
+                <div class="col-md-6 services-col">
+                    <div class="text-center">
+                        <img class="services-img" src="assets/img/icons/offshore_staffing_icon.png">
+                        <h3>Offshore Staffing</h3>
+                        <div class="text-justify">
+                            <p>We design and implement Web and Mobile application to suit your requirements.We primarily use a solid javascript framework known as meteor for the web applications.And the applications build like this are super fast and responsive, it brings a whole new user experience, which users love.</p>
+
                         </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Message</label>
-                                <textarea class="form-control" data-validation-required-message="Please enter a message." id="message" placeholder="Message" required="" rows="5"></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div><br>
-                        <div id="success"></div>
-                        <div class="row">
-                            <div class="form-group col-xs-12">
-                                <button class="btn btn-lg btn-primary btn-square btn-raised schedule-button" type="submit">Send</button>
-                            </div>
+                    </div>
+                </div>
+                <div class="col-md-6 services-col">
+                    <div class="text-center">
+                        <img class="services-img" src="assets/img/icons/application-support-icon.png">
+                        <h3>Application Support</h3>
+                        <div class="text-justify">
+                            <p>We design and implement Web and Mobile application to suit your requirements.We primarily use a solid javascript framework known as meteor for the web applications.And the applications build like this are super fast and responsive, it brings a whole new user experience, which users love.</p>
+
                         </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+    
     <div id="footer"></div><!--Footer Included-->
 </div><!-- Core JavaScript Files -->
 <script src="assets/js/jquery-1.10.2.js">
